style.css
@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@500&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Figtree:wght@800&display=swap');

html,body{
    margin:0;
    padding:0;
    height:100%;
}

body {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center; 
    font-family: "Figtree", sans-serif;
    background-color: hsl(47, 88%, 63%);

}

a,p,button,h2{
    margin: 0px;
}

main {
    
    background-color: hsl(0, 0%, 100%);
    border-radius: 20px;
    box-shadow: 8px 10px 0 2px;
    border: 1px solid #111111;
    
  
}

main section{
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 24px;
    margin: 24px;
}

main section img{
    border-radius: 10px;
    margin: 0px;
    
}


section button {
     background-color:hsl(47, 88%, 63%) ;
     border: none;
     height: 29px;
     width: 82px;
     border-radius: 4px;
     font-size: 14px;
     font-weight: 800;
     margin: 0px;
}

section a {
    text-decoration: none;
    font-weight: 800;
    color: hsl(0, 0%, 7%);
    
}

section h2 {
   font-size: 24px;
    
}
section a:hover {
    color:hsl(47, 88%, 63%)
}

section div.author {
    display: flex;
    gap: 12px;
    
}

section div.author img {
    height: 32px;
    width: 32px
}



section p {
   color: hsl(0, 0%, 50%);
}

section div.author p {
    font-weight: 800;
    font-size: 14px;
    line-height: 30px;
    color:hsl(0, 0%, 7%);
}



@media only screen and (min-width:375px) and (max-width:1440px) {
     main {
            height: 522px;
            width: 384px;

     }
}



@media only screen and (max-width:375px) {
    section {
        height: 501px;
        width: 327px;

 }

    section button {
  
    height: 73px;
    width: 26px;
    

}

    main  img{
    height: 200px;
    width: 279px;
    
}
}

